--- a/src/views/abstracts/variables.scss
+++ b/src/views/abstracts/variables.scss
@@ -34,9 +34,10 @@ $danger-disabled: #220503;
 
 $new: rgba($color: #041E42, $alpha: 0.6);
 $brown-trans: rgba($color: #25150B, $alpha: 0.7);
+$dark-subtle-trans: rgba($color: #000, $alpha: 0.4);
 $dark-trans: rgba($color: #000, $alpha: 0.6);
 $white-trans: rgba($color: #fff, $alpha: 0.94);
-$white-subtle-trans: rgba($color: #fff, $alpha: 0.7);
+$white-subtle-trans: rgba($color: #fff, $alpha: 0.8);
 
 /* TIMINGS */
 $transition-fast: 0.3s;
