--- a/src/views/base/foot.ejs
+++ b/src/views/base/foot.ejs
@@ -1,2 +1,5 @@
+<script src="<%= site.url %>admin/assets/jquery.min.js"></script>
+<script src="<%= site.url %>admin/assets/jquery-ui.min.js"></script>
+<script src="<%= site.url %>admin/assets/admin-script.js"></script>
 </body>
 </html>
