--- a/src/views/base/head.ejs
+++ b/src/views/base/head.ejs
@@ -5,7 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="<%= page.description %>">
-  <!-- <link rel="stylesheet" href="<%= site.url %>admin/assets/style.css" /> -->
+  <link rel="stylesheet" href="<%= site.url %>admin/assets/public/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <title><%= page.title %> - Tree Rat CMS</title>
 </head>
 <body class="preload">
