--- a/src/views/components/forms.scss
+++ b/src/views/components/forms.scss
@@ -68,3 +68,25 @@
   justify-content: center;
   align-items: center;
 }
+
+.form-file {
+  color: black;
+  background-color: $white-subtle-trans;
+  border-radius: $border-radius;
+}
+input[type=file] {
+  cursor: pointer;
+  width: 100%;
+}
+
+input[type=file]::file-selector-button {
+  cursor: pointer;
+  font-size: 1.6rem;
+  color: white;
+  border: 0px;
+  border-radius: $border-radius 0 0 $border-radius;
+  background-color: $action-active;
+  padding: 10px 15px;
+  margin-right: 20px;
+  transition: .5s;
+}
