--- a/src/views/layouts/modal-user.ejs
+++ b/src/views/layouts/modal-user.ejs
@@ -8,15 +8,7 @@
       </form>
 
       <div class="modal-buttons">
-        <%- include("../components/button", {text: "Logout", 
-                                             color: "cancel",
-                                             extraClass: "logout",
-                                             spinner: true,
-                                             cmsModal: "modal-user", 
-                                             cmsForm: "add-folder",
-                                             cmsUrl: site.url+"admin/page-folders",
-                                             cmsAnchor: "pages-accordion-anchor",
-                                             cmsText: "Adding Folder" })%>
+        <a href="<%- site.url %>admin/logout" class="button button-link">Logout</a>
       </div>
 
   </div>
