--- a/src/views/templates/pages.scss
+++ b/src/views/templates/pages.scss
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items:flex-start;
+  h2 {
+    margin-top: 0;
+  }
 }
